# ax-devil-mqtt

./: .gitignore  GOOD_DESIGN.md  README.md  ax_devil_docs.md  pyproject.toml  requirements-dev.txt
.cursor/rules/: general.mdc
.github/skills/ax-devil-mqtt/: SKILL.md
.github/skills/ax-devil-mqtt/references/: cli.md  python-api.md
docs/: ARCHITECTURE.md  VISION.md
recordings/: device_recording.jsonl
src/ax_devil_mqtt/: __init__.py  cli.py
src/ax_devil_mqtt/core/: analytics.py  analytics_mqtt_stream_tmp.py  device_analytics_mqtt_manager.py  manager.py  publisher.py  recorder.py  replay.py  subscriber.py  temporary_analytics_mqtt_publisher.py  types.py
src/ax_devil_mqtt/examples/: analytics_monitor.py  cli.py  replay.py
src/examples/: analytics_monitor.py  replay.py
tests/: conftest.py  test_message_processing.py  test_message_types.py  test_sanity_checks.py
